Add outline variant to icons

--- a/src/principles/icons.css
+++ b/src/principles/icons.css
@@ -1,12 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 .material-symbols-rounded {
-    font-family: 'Material Symbols Rounded', sans-serif;
-    font-variation-settings:
-        'FILL' 1,
-        'wght' var(--font-weight-regular),
-        'GRAD' 0,
-        'opsz' 48;
-    font-size: var(--font-size-xl);
-    color: var(--font-color-1);
+  font-family: "Material Symbols Rounded", sans-serif;
+  font-variation-settings: "FILL" 1, "wght" var(--font-weight-regular), "GRAD" 0,
+    "opsz" 24;
+  font-size: var(--font-size-xl);
+  color: var(--font-color-1);
+}
+
+.material-symbols-rounded-outlined {
+  font-family: "Material Symbols Rounded", sans-serif;
+  font-variation-settings: "FILL" 0, "wght" var(--font-weight-regular), "GRAD" 0,
+    "opsz" 24;
+  font-size: var(--font-size-xl);
+  color: var(--font-color-1);
 }
