--- a/src/atoms/Icon/index.module.css
+++ b/src/atoms/Icon/index.module.css
@@ -1,7 +1,6 @@
 @import url("../../principles/icons.css");
 
 .icon {
-    background: var(--bg-color-1);
-
-    color: var(--font-color-1)
+  background: var(--bg-color-1);
+  color: var(--font-color-1);
 }
