--- a/src/atoms/Label/index.module.css
+++ b/src/atoms/Label/index.module.css
@@ -6,9 +6,7 @@
   text-indent: var(--spacing-level-2);
   font-size: var(--font-size-xs);
   font-family: var(--font-family);
-  color: var(--font-color-1);
-
-  opacity: 65%;
+  color: rgba(24, 36, 43, 0.65);
 }
 
 .disabled {
